force-app/main/default/objects/SIB_Section_Text__c/SIB_Section_Text__c.object-meta.xml
<CustomObject>
    <description>Rich text used in Section Titles in SIB Forms</description>
    <label>SIB Section Text</label>
    <nameField>
        <label>Text ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIB Section Text</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>