force-app/main/default/objects/SIB_Section_Text__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Object Name:Text ID</description>
    <externalId>true</externalId>
    <inlineHelpText>This field is populated automatically by Salesforce workflow and should  be cleared when cloning</inlineHelpText>
    <label>Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>