force-app/main/default/objects/SIB_Section_Text__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>API Name of Form Object</description>
    <inlineHelpText>API Name of Form Object</inlineHelpText>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SIB_Object_Name</valueSetName>
    </valueSet>
</CustomField>