force-app/main/default/objects/SIB_Section_Text__c/fields/SIB_Reference__c.field-meta.xml
<CustomField>
    <fullName>SIB_Reference__c</fullName>
    <description>SIB Reference Information parent record</description>
    <inlineHelpText>SIB Reference Information parent record</inlineHelpText>
    <label>SIB Reference</label>
    <referenceTo>SIB_Information__c</referenceTo>
    <relationshipLabel>Section Text</relationshipLabel>
    <relationshipName>Section_Text</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>