force-app/main/default/objects/SIB_Section_Text__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <description>Plain or rich text used in section summaries, page titles etc in SIB Forms</description>
    <inlineHelpText>Plain or rich text used in section summaries, page titles etc in SIB Forms</inlineHelpText>
    <label>Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>