force-app/main/default/objects/SIB_Section_Text__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SIB_Reference__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Text__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>