force-app/main/default/objects/SIB_Section_Text__c/listViews/EOI.listView-meta.xml
<ListView>
    <fullName>EOI</fullName>
    <columns>NAME</columns>
    <columns>SIB_Reference__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Name__c</field>
        <operation>equals</operation>
        <value>Form_LCF_EOI_1__c</value>
    </filters>
    <label>EOI</label>
</ListView>