force-app/main/default/objects/SIB_Section_Text__c/listViews/Grants.listView-meta.xml
<ListView>
    <fullName>Grants</fullName>
    <columns>NAME</columns>
    <columns>SIB_Reference__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Name__c</field>
        <operation>startsWith</operation>
        <value>Form_LCF_Grant</value>
    </filters>
    <label>Grants</label>
</ListView>